Fix blurry images

--- a/assets/scss/common/_variables-custom.scss
+++ b/assets/scss/common/_variables-custom.scss
@@ -42,6 +42,10 @@ $spacers: (
   7: $spacer * 5
 ) !default;
 
+img {
+  margin: $spacer;
+}
+
 figcaption {
     text-align: center;
 }
